fix: bag with navbar on ios

--- a/components/Navbar/NavMenu.scss
+++ b/components/Navbar/NavMenu.scss
@@ -80,8 +80,9 @@
             align-items: flex-start;
             gap: 10px;
             right: 0;
-            top: 100%;
+            top: 0;
             padding: toRem(40px, 16px) 0;
+            padding-top: 80px;
             height: 100vh;
             z-index: 99;
             background: $cl_green;
@@ -258,6 +259,8 @@
         justify-content: space-between;
         flex-direction: column;
         cursor: pointer;
+        position: relative;
+        z-index: 100;
 
 
         @include md {
